--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "grunt-contrib-cssmin": "^1.0.1",
     "grunt-contrib-uglify": "^2.0.0",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-shell": "^1.3.0"
+    "grunt-jsdoc": "^2.1.0",
+    "grunt-shell": "^1.3.0",
+    "ink-docstrap": "^1.3.0",
+    "minami": "^1.1.1"
   }
 }
